@@ -12,6 +12,7 @@
 * Moved conversion options configuration to different file defsetting.xml that will be located in user profile, if not exist will be copied there from program folder or created from defaults. This file will be used by all converters either command line , GUI or COM.
 * When creating configuration from defaults it will not have font settings included
 * Changed to use innosetup 5.5.3
+* Changed default style to display "code" text on light yellow background on systems that support color
 * Doubled size of the single LOG file to reduce number of log files created
 * Changed file extension generated by default to be lower case ".epub" in order to fix validation warning and to be more compatible
 * Fixed some issues with localization
